// Copyright 2024 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.teams.v1;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

option go_package = "go.chromium.org/luci/teams/proto/v1";

// Service to get team information.
//
// Use of LUCI is subject to the Google [Terms of Service](https://policies.google.com/terms)
// and [Privacy Policy](https://policies.google.com/privacy).
service Teams {
  // Get a team.
  // Use the resource alias 'my' to get just the current user's team.
  rpc Get(GetTeamRequest) returns (Team) {};

  // TODO: Add Update, Create, List RPCs.
}

message GetTeamRequest {
  // The resource name of the team to get.
  //
  // You can use 'my' as the id to get the team for the current user
  // i.e. set the name to 'teams/my'.
  //
  // Format: teams/{id}
  string name = 1;
}

// Represents a team resource.
message Team {
  // The name of this team.
  // Format: team/{id}
  string name = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (google.api.field_behavior) = IMMUTABLE
  ];
  // The time the team was made.
  google.protobuf.Timestamp create_time = 2
      [(google.api.field_behavior) = OUTPUT_ONLY];
}
